code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_47.wast
(assert_invalid
  (module (func $type-value-num-vs-nums (result i32 i32)
    (block (result i32 i32) (i32.const 0))
  ))
  "type mismatch"
)